test/classes/errors/nilability-assign/assign-oknil-shared-from-oknil-owned.good
assign-oknil-shared-from-oknil-owned.chpl:9: error: cannot assign 'owned MyClass?' to a 'shared MyClass?'
